<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="edu.mnstate.cw3967me.p6.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvOrderForm"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCurryrice"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:src="@drawable/curryrice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price" />

            <TextView
                android:paddingTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRice" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/riceSRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRiceRadioButtonClicked"
                    android:text="200g" />

                <RadioButton
                    android:id="@+id/riceMRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRiceRadioButtonClicked"
                    android:text="300g" />

                <RadioButton
                    android:id="@+id/riceLRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRiceRadioButtonClicked"
                    android:text="400g" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSpice" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/lowRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onSpicyLevelRadioButtonClicked"
                    android:text="@string/low" />

                <RadioButton
                    android:id="@+id/midRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onSpicyLevelRadioButtonClicked"
                    android:text="@string/mid" />

                <RadioButton
                    android:id="@+id/highRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onSpicyLevelRadioButtonClicked"
                    android:text="@string/high" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvToppings" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkboxNatto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/natto" />

                <CheckBox
                    android:id="@+id/checkboxSpinach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/spinach" />

                <CheckBox
                    android:id="@+id/checkboxTuna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/tuna" />

                <CheckBox
                    android:id="@+id/checkboxCheese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="@string/cheese" />
            </GridLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSpoon" />

            <ToggleButton
                android:id="@+id/spoonsToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="no"
                android:textOn="yes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvQuantity" />

            <Spinner
                android:id="@+id/spinnerQuantity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:id="@+id/quantitySelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#ff808080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFirstName" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/etHintFistName" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLastName" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/etHintLastName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvStore" />

            <AutoCompleteTextView
                android:id="@+id/actvStores"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOrderTiming"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dpDate"
                android:minDate="mmddyyyy"></DatePicker>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRequest" />

            <EditText
                android:id="@+id/etRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="70dp"
                android:minLines="5" />

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit_onClick"
            android:text="@string/btnSubmit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:onClick="clear_onClick"
            android:text="@string/btnClear" />
    </LinearLayout>
</LinearLayout>
