<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.mnstate.cw3967me.p6.Results">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/tvRice" />
        <TextView
            android:id="@+id/tvRice"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/tvSpice" />
        <TextView
            android:id="@+id/tvSipicyLevel"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/tvToppings" />
        <TextView
            android:id="@+id/tvToppings"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/tvSpoon" />
        <TextView
            android:id="@+id/tvSpoons"
            android:layout_column="1"
            android:layout_row="3" />

        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/tvQuantity" />
        <TextView
            android:id="@+id/tvQuantity"
            android:layout_column="1"
            android:layout_row="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/tvFirstName" />
        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/tvLastName" />
        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/tvStore" />
        <TextView
            android:id="@+id/tvStores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/tvOrderTiming" />
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/tvRequest" />
        <TextView
            android:id="@+id/tvRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="10"
            android:paddingTop="30dp"
            android:text="@string/tvTax" />
        <TextView
            android:id="@+id/tvTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="10"
            android:paddingTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="11"
            android:text="@string/tvTotal" />
        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="11" />
    </GridLayout>
</RelativeLayout>
